Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2048,9 +2048,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>cool</th>\n",
+       "      <th>date</th>\n",
+       "      <th>funny</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>text</th>\n",
+       "      <th>useful</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>4JNXUYY8wbaaDmk3BPzlWw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2012-06-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>wl8BO_I-is-JaMwMW5c_gQ</td>\n",
+       "      <td>4</td>\n",
+       "      <td>I booked a table here for brunch and it did no...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>fo4mpUqgXL2mJqALc9AvbA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4JNXUYY8wbaaDmk3BPzlWw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2012-01-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>cf9RrqHY9eQ9M53OPyXLtg</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Came here for lunch after a long night of part...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TVvTtXwPXsvrg2KJGoOUTg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4JNXUYY8wbaaDmk3BPzlWw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2017-05-10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BvmhSQ6WFm2Jxu01G8OpdQ</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Loved the fried goat cheese in tomato sauce al...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>etbAVunw-4kwr6VTRweZpA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4JNXUYY8wbaaDmk3BPzlWw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-05-03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IoKp9n1489XohTV_-EJ0IQ</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Love the outdoor atmosphere. Price was right, ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>vKXux2Xx3xcicTgYZoR0pg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4JNXUYY8wbaaDmk3BPzlWw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-06-04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7YNmSq7Lb1zi4SUKXaSjfg</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Best steak in Vegas. Best mashed potatoes in V...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>e3s1x4LLqfSkRTWDy_-Urg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              business_id  cool        date  funny               review_id  \\\n",
+       "0  4JNXUYY8wbaaDmk3BPzlWw     0  2012-06-10      0  wl8BO_I-is-JaMwMW5c_gQ   \n",
+       "1  4JNXUYY8wbaaDmk3BPzlWw     0  2012-01-20      0  cf9RrqHY9eQ9M53OPyXLtg   \n",
+       "2  4JNXUYY8wbaaDmk3BPzlWw     0  2017-05-10      0  BvmhSQ6WFm2Jxu01G8OpdQ   \n",
+       "3  4JNXUYY8wbaaDmk3BPzlWw     0  2014-05-03      0  IoKp9n1489XohTV_-EJ0IQ   \n",
+       "4  4JNXUYY8wbaaDmk3BPzlWw     0  2014-06-04      0  7YNmSq7Lb1zi4SUKXaSjfg   \n",
+       "\n",
+       "   stars                                               text  useful  \\\n",
+       "0      4  I booked a table here for brunch and it did no...       0   \n",
+       "1      4  Came here for lunch after a long night of part...       0   \n",
+       "2      5  Loved the fried goat cheese in tomato sauce al...       0   \n",
+       "3      5  Love the outdoor atmosphere. Price was right, ...       0   \n",
+       "4      5  Best steak in Vegas. Best mashed potatoes in V...       3   \n",
+       "\n",
+       "                  user_id  \n",
+       "0  fo4mpUqgXL2mJqALc9AvbA  \n",
+       "1  TVvTtXwPXsvrg2KJGoOUTg  \n",
+       "2  etbAVunw-4kwr6VTRweZpA  \n",
+       "3  vKXux2Xx3xcicTgYZoR0pg  \n",
+       "4  e3s1x4LLqfSkRTWDy_-Urg  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import a specific sheet\n",
     "df = workbook.parse(sheet_name=1, header=2)\n",
@@ -2078,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
